# CortexDB

./: .gitignore  Dual-Pipeline Ingestion and Query Plan.txt  NewFeatures.txt  README.md  RevisedPlan.txt  SchemaChanges.txt  implementation_plan.md.resolved
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish-js.yml  publish-py.yml  release.yml
cortexdb-java/: .gitignore  README.md  pom.xml  settings.xml
cortexdb-js/: .gitignore  README.md  main.ts  package-lock.json  package.json  test.js  tsconfig.json  vitest.e2e.config.ts  vitest.unit.config.ts
cortexdb-js/src/: client.ts  httpWrapper.ts  index.ts  ingest.ts  models.ts  query.ts  setup.ts
cortexdb-js/tests/e2e/: cortexdb.e2e.test.ts
cortexdb-js/tests/unit/: helpers.ts  ingest.test.ts  query.test.ts  setup.test.ts
cortexdb-py/: .gitignore  README.md  main.py  pyproject.toml
cortexdb-py/cortexdb/: __init__.py  client.py  exceptions.py  ingest.py  models.py  query.py  setup.py
cortexdb-py/cortexdb/llm/: __init__.py  provider.py
cortexdb-py/tests/: conftest.py  test_ingest.py  test_llm.py  test_models.py  test_query.py  test_setup.py
docs/: api-reference.html  architecture.html  getting-started.html  index.html  sdks.html  style.css
hello/: pom.xml
hello/src/main/resources/: schema.sql
memory/: .gitignore  Dockerfile  compile_log.txt  compile_log_2.txt  compose.yaml  pom.xml
memory/src/main/resources/: application.properties
(+136 files in other folders)
